# shana

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  start_all_test.bat
doc/man/man3/: stack.h.3  stack_t.3  vector.h.3  vector_t.3
doc/shana-doc/: annotated.html  classes.html  dir_04cbbe8f88e232f951037efa40ad0e5a.html  dir_077a772f58cbe342140acd60043a8af1.html  dir_0ebf3060c1e0c54ebb0ac136fa839d44.html  dir_13f16d33757995999df14d8b4de35cf1.html  dir_5d1bb6bf0ac1f5b45c29bb38aec28ce6.html  dir_779f2a0c2aadb6662c83f36fbd8833fd.html  dir_7c60ce720278dfa96bba61f73c37ceae.html  dir_855db89c6e63cb9d51aaccbaa453510d.html  dir_8ceffd4ee35c3518d4e8bdc7e638efe8.html  dir_e6bb53534ac0e427887cf7a94c0c004e.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  mkdocs.yml  stack_8h.html  stack_8h_source.html  structstack__t.html  structvector__t.html  vector_8h.html  vector_8h_source.html
doc/shana-doc/docs/: index.md  stack.md  vector.md
doc/shana-doc/docs/example/: example_stack.md  example_vector.md
doc/shana-doc/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js  pages_3.js  pages_5.js  pages_6.js  pages_9.js  pages_a.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js
doc/shana-doc/site/: 404.html  index.html  stack.html  vector.html
doc/shana-doc/site/example/: example_stack.html  example_vector.html
doc/shana-doc/site/search/: search_index.json
example/: example_stack.c  example_vector.c
include/shana/: stack.h  vector.h
src/: stack.c  vector.c
tests/: CMakeLists.txt  test_stack.c  test_vector.c
